# epg_task

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
docker/: Dockerfile
epg/: __init__.py  clients.py  dependencies.py  utils.py
epg/database/: api_models.py  storage_models.py
epg/database/alembic/: env.py
epg/database/alembic/versions/: 1b9cd65dc3a4_added_table_ratings.py  5a3e0a5b3d1b_added_user_model.py  7caef8ab8338_added_column_date_in_users_table.py  ad4b2e4d7662_added_columns_lat_and_long_in_users_.py
epg/endpoints/: __init__.py  clients.py  methods.py
epg/tests/: conftest.py  test_api.py
