[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "epg"
description = "Backend for epg"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
include = ["epg"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]